# Sails

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  Makefile.arch  Makefile.test  README.md  build.sh  fix_library.sh  get_sources  pyproject.toml
.github/workflows/: deploy.yml  main.yml  test.yml  wheels.yml
clipper/ccp4/: CMakeLists.txt
clipper/gemmi/: CMakeLists.txt
clipper/minimol/: CMakeLists.txt
docs/: transfer_docs.sh
docs/Writerside/: redirection-rules.xml  s.tree  writerside.cfg
docs/Writerside/cfg/: buildprofiles.xml
docs/Writerside/topics/: Automated-EM-Glycan-Building.topic  Automated-Glycan-Building.topic  Automated-Xray-Glycan-Building.topic  Command-Line-Usage.topic  Compare-Structures.topic  Find-Glycosylation-Sites.topic  Find-WURCS.topic  Generate-SNFG-Diagrams.topic  Installation.topic  Model-Glycan-from-WURCS.topic  Morph-Glycan.topic
gemmi/: CMakeLists.txt
include/clipper/minimol/: minimol_io.h
lib/: libccp4c.so.8.0  libclipper-ccp4.so.2  libclipper-contrib.so.2  libclipper-core.so.2  libclipper-minimol.so.2  libclipper-mmdb.so.2  libfftw.so.2  libmmdb2.so.0  librfftw.so.2
package/: .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  MANIFEST.in  README.md  _pyproject.toml  get_sources  pyproject.toml  setup.py  swap.py
package/ccp4/: CMakeLists.txt
package/clipper/ccp4/: CMakeLists.txt
package/clipper/cif/: CMakeLists.txt
package/clipper/cns/: CMakeLists.txt
package/clipper/contrib/: CMakeLists.txt
package/clipper/core/: CMakeLists.txt
package/clipper/gemmi/: CMakeLists.txt
package/clipper/minimol/: CMakeLists.txt
package/clipper/mmdb/: CMakeLists.txt
package/clipper/phs/: CMakeLists.txt
package/data/: data.json
package/fftw/: CMakeLists.txt
package/gemmi/: CMakeLists.txt
package/mmdb2/: CMakeLists.txt
package/models/special_monomers/: MAN-1C4.cif
package/rfftw/: CMakeLists.txt
package/scripts/: bump_version.py  compare_structures.py  deglycosylate_models.py
package/src/bindings/: js_sails.cpp  python_sails.cpp  sails-gemmi-bindings.cpp
package/src/cpp/: sails-cif.cpp  sails-conformer.cpp  sails-density.cpp  sails-dot.cpp  sails-glycan.cpp  sails-json.cpp  sails-lib.cpp  sails-lib.h  sails-linkage.cpp  sails-morph.cpp  sails-refine.cpp  sails-sequence.cpp  sails-snfg.cpp  sails-solvent.cpp  sails-telemetry.cpp  sails-topology.cpp  sails-utils.cpp  sails-vector.cpp  sails-wurcs.cpp  sails.cpp
package/src/cpp/density/: sails-density.cpp  sails-em-density.cpp  sails-xtal-density.cpp
package/src/cpp/snfg/: sails-snfg-shape.cpp  sails-snfg.cpp
package/src/cpp/snfg/shapes/: circle.cpp  diamond.cpp  rectangle.cpp  square.cpp  triangle.cpp
package/src/cpp/tests/: sails-glycan-test.cpp
package/src/include/: sails-cif.h  sails-conformer.h  sails-density.h  sails-dot.h  sails-gemmi-bindings.h  sails-glycan.h  sails-json.h  sails-linkage.h  sails-model.h  sails-morph.h  sails-refine.h  sails-sequence.h  sails-snfg.h  sails-solvent.h  sails-telemetry.h  sails-topology.h  sails-utils.h  sails-vector.h  sails-wurcs.h
package/src/include/density/: sails-density.h  sails-em-density.h  sails-xtal-density.h
package/src/include/snfg/: sails-snfg-shape.h  sails-snfg.h
package/src/include/snfg/shapes/: circle.h  diamond.h  rectangle.h  square.h  triangle.h
package/src/sails/: __init__.py  compare.py  conformer.py  find.py  glycosylate.py  interface.py  main.py  morph.py  snfg.py  test.py  wurcs.py
package/src/sails/data/: AMAN.cif  data.json
package/tests/: test_docs.py  test_glycosylation.py  test_sails.py  test_setuptools.py  test_units.py  test_version.py
package/tests/test_data/: 6PLH.cif  6PLH_deglycosylated.cif
rfftw/: Makefile
scripts/: deglycosylate_models.py  glycosylate.py
src/: sails-find.cpp  sails-find.h  sails-lib.cpp  sails-lib.h  sails-model.cpp  sails-model.h  sails-refine.cpp  sails-refine.h  sails.cpp
src/bindings/: sails-bind.cpp  sails-bind.h
src/cpp/: csails.cpp  sails-analyse.cpp  sails-analyse.h  sails-data.h  sails-find.cpp  sails-find.h  sails-lib.cpp  sails-lib.h  sails-model.h  sails-refine.cpp  sails-score.cpp  sails-score.h  sails-util.h
src/pysails/: __init__.py
src/python/: py-sails-find.cpp  py-sails-input.cpp
testing/test_data/: run_sails_test.py
tests/: test_sails_lib.py
